  develop and test the MP3 codec chip driver.  It really doesn't do
  anything yet except display a text box saying "Coming soon", and I
  need to minimize the icon size a bit.  From Ken Pettit (2013-5-11).
* NxWidgets/nxwm/src/glyph_mediaplayer.cxx:  Smaller version of the
  media player glyph.  From Ken Pettit (2013-5-12).
* NxWidgets/nxwm/include/ccalibration.hxx and src/ccalibration.cxx:
  Fix a race condition that would cause the calibration screen
  to fail to come up when its icon was touched (From Ken Pettit,
  2013-5-12).
* Kconfig:  Default priorities for NxWidget and NxWM threads
  should be 100, not 50, to be consistent with other default priorities.
* NxWidgets::CGlyphSliderHorizontal and NxWidgets::CGlyphSliderHorizontalGrip:
  New widgets added by Ken Pettit (2013-5-15).
* NxWidgets/UnitTests/CGlyphSliderHorizontal:  Adds a unit test for the
  NxWidgets::CGlyphSliderHorizontal class. From Ken Pettit (2013-5-17) .
* NxWidgets::CGlyphSliderHorizontal:  Fix a drawing error.  From Ken
  Pettit (2013-5-17).
* UnitTests/*/Makefile and .gitignore:  Update the way that NSH
  the Unit Tests are registered as built-in NSH applications (2013-5-30).
* NxWidgets::CImage:  Allow a NULL pointer for a bitmap.  Add protection
  to prevent dereferencing the NULL pointer.  From Petteri Aimonen
  (2013-6-4).
* NxWidgets::CNumericEdit:  Delay before auto-incrementing now varies:
  A longer delay is required to start auto-incrementing and speed increases
  while pressed.  From Petteri Aimonen (2013-6-4).
* NxWM::CTaskbar: Add a method to redraw the taskbar and the current
  application.  This should only be necessary if the display loses
  state due to e.g. powerdown or other manual intervention.  From
  Petteri Aimonen (2013-6-4).

1.9 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

* NxWM::CCalibration.cxx/hxx:  If CONFIG_NXWM_CALIBRATION_MESSAGES is
  defined then CCalibration will provide some instructions in the center
  of the display (2013-10-14).
