@@ -526,6 +526,36 @@
 #  define CONFIG_NXWM_CALIBRATION_MARGIN 40
 #endif
 
+// Calibration sample averaging
+
+#ifndef CONFIG_NXWM_CALIBRATION_AVERAGE
+#  undef CONFIG_NXWM_CALIBRATION_AVERAGE
+#  undef CONFIG_NXWM_CALIBRATION_NSAMPLES
+#  define CONFIG_NXWM_CALIBRATION_NSAMPLES 1
+#  undef CONFIG_NXWM_CALIBRATION_DISCARD_MINMAX
+#endif
+
+#if !defined(CONFIG_NXWM_CALIBRATION_NSAMPLES) || CONFIG_NXWM_CALIBRATION_NSAMPLES < 2
+#  undef CONFIG_NXWM_CALIBRATION_AVERAGE
+#  undef CONFIG_NXWM_CALIBRATION_NSAMPLES
+#  define CONFIG_NXWM_CALIBRATION_NSAMPLES 1
+#  undef CONFIG_NXWM_CALIBRATION_DISCARD_MINMAX
+#endif
+
+#if CONFIG_NXWM_CALIBRATION_NSAMPLES < 3
+#  undef CONFIG_NXWM_CALIBRATION_DISCARD_MINMAX
+#endif
+
+#if CONFIG_NXWM_CALIBRATION_NSAMPLES > 255
+#  define CONFIG_NXWM_CALIBRATION_NSAMPLES 255
+#endif
+
+#ifdef CONFIG_NXWM_CALIBRATION_DISCARD_MINMAX
+#  define NXWM_CALIBRATION_NAVERAGE (CONFIG_NXWM_CALIBRATION_NSAMPLES - 2)
+#else
+#  define NXWM_CALIBRATION_NAVERAGE CONFIG_NXWM_CALIBRATION_NSAMPLES
+#endif
+
 /* Hexcalculator applications ***********************************************/
 /**
  * Calibration display settings:
